--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,12 @@ set(CMAKE_CXX_COMPILER "clang++-11")
 
 project(simple-raytracer)
 
-set(CMAKE_CXX_STANDARD          17)
+set(CMAKE_CXX_STANDARD          20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS        OFF)
+
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
 
 # Mhmm. We're sticking with just Clang. Note that -stdlib is a Clang-only flag.
 set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -stdlib=libc++")
@@ -27,6 +30,7 @@ add_library(rt-libs
     src/stb_image_write.h
     src/ray.cpp
     src/raytracing.cpp
+    src/RenderedChunk.hpp
     src/RenderThread.cpp
     src/utils.cpp
     src/vec3.cpp
@@ -38,4 +42,5 @@ add_executable(main
 
 target_link_libraries(main
     rt-libs
+    Threads::Threads
 )
